tests/conformance/accept/import-basic/a.ts
export function inc(x: bigint): bigint {
  return x + 1n;
}
