tests/conformance/reject/0089-default-export.ts
// @thales-expect-error TH0089
export default function f(): bigint {
  return 1n;
}
